--- a/computacao.html
+++ b/computacao.html
@@ -8,6 +8,8 @@
     <title>Ciências da Computação</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<!--favicon para computacao.html-->
+<link rel="shortcut icon" href="imagens/imagens.ico/favicon3.ico" type="image/x-icon">
 <body>
 
     <header>
@@ -22,16 +24,34 @@
         </nav>
     </header>
 
+<!-- criando uma mini pagina com o conceito de ancoras (links internos)-->
+ <nav class="sub-menu">
+    <a href="#hardware">Hardware</a> <a href="#software">Software</a>
+    <a href="#algoritmos">Algoritmos</a>
+</nav>
     <main>
         <section>
             <h2>Fundamentos da Computação</h2>
             <p>Conteúdo sobre algoritmos e hardware será inserido aqui.</p>
         </section>
+
+        <section id="hardware" class="tema-bloco"> <h2>Hardware</h2>
+        <p>Tudo sobre a parte física do computador: processadores, memórias e placas.</p>
+    </section>
+
+    <section id="software" class="tema-bloco"> <h2>Software</h2>
+        <p>Focado em sistemas operacionais, aplicativos e a lógica dos programas.</p>
+    </section>
+
+    <section id="algoritmos" class="tema-bloco"> <h2>Algoritmos</h2>
+        <p>A base de tudo: sequências de passos para resolver problemas complexos.</p>
+    </section>
+
     </main>
 
     <footer>
         <!--é a seção que define o final da página (o rodapé), usada para colocar créditos, ano de criação e avisos de direitos autorais-->
-        <p>&copy; 2025 - Guia Educacional de Tecnologia</p>
+        <p>&copy; 2025 - Guia Educacional de Tecnologia(começo do meu rodapé :D )</p>
     </footer>
 
 </body>
