--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Guia de Cibersegurança</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<!--favicon para index.html-->
+<link rel="shortcut icon" href="imagens/imagens.ico/favicon4.ico" type="image/x-icon">
 <body>
 
     <header>
@@ -26,11 +28,29 @@
             <h2>Bem-vindo ao Guia de Segurança Digital</h2>
             <p>Conteúdo sobre proteção de dados será inserido aqui.</p>
         </section>
+
+        <!--criando tabs(abas)-->
+        <section id="glossario">
+    <h3>Glossário de Termos</h3>
+
+<!--essa tag DETAILS cria um comportamento de esconder e mostrar-->
+    <details>
+        <!--e essa SUMMARY é o botão clicavel que fica visivel-->
+        <summary>Criptografia</summary> <p>É o processo de transformar informações em códigos para que apenas pessoas autorizadas consigam ler.</p> </details>
+
+    <details>
+        <summary>Firewall</summary> <p>Uma barreira de segurança que controla o que entra e sai da sua rede de internet.</p>
+    </details>
+
+    <details>
+        <summary>VPN</summary> <p>Uma rede privada que esconde sua localização e protege seus dados enquanto você navega.</p>
+    </details>
+</section>
     </main>
 
     <footer>
         <!--é a seção que define o final da página (o rodapé), usada para colocar créditos, ano de criação e avisos de direitos autorais-->
-        <p>&copy; 2025 - Guia Educacional de Tecnologia</p>
+        <p>&copy; 2025 - Guia Educacional de Tecnologia (começo do meu rodapé :D )</p>
     </footer>
 
 </body>
